--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,13 @@ services:
         build:
             context: .
             dockerfile: Dockerfile
-            args:
-                WWWGROUP: '${WWWGROUP}'
         image: bank.api:v1
+        env_file:
+            - ./envs/.env
         ports:
             - '${APP_PORT:-88}:80'
-        environment:
-            WWWUSER: '${WWWUSER}'
-            LARAVEL_SAIL: 1
         volumes:
-            - '.:/var/www'
+            - './:/var/www'
         networks:
             - sail
         depends_on:
@@ -22,7 +19,7 @@ services:
     bank.db:
         image: 'mysql:8.0'
         ports:
-            - '${FORWARD_DB_PORT:-3306}:3306'
+            - '${DB_PORT:-3306}:3306'
         environment:
             MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
             MYSQL_DATABASE: '${DB_DATABASE}'
