--- a/envs/.env.example
+++ b/envs/.env.example
@@ -3,16 +3,17 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_PORT=88
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=bank.db
 DB_PORT=3306
-DB_DATABASE=api
-DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=test
+DB_DATABASE=bank
+DB_USERNAME=bank
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
