new: adicionadas as migrations e ajustes no mapeamento das entidades

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,41 +5,22 @@ services:
             context: .
             dockerfile: Dockerfile
         image: bank.api:v1
-        env_file:
-            - ./envs/.env
         ports:
-            - '${APP_PORT:-88}:80'
+            - 88:80
         volumes:
             - './:/var/www'
-        networks:
-            - sail
         depends_on:
+            - bank.db
+        links:
             - bank.db
         container_name: bank.api
     bank.db:
-        image: 'mysql:8.0'
-        ports:
-            - '${DB_PORT:-3306}:3306'
-        environment:
-            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_DATABASE: '${DB_DATABASE}'
-            MYSQL_USER: '${DB_USERNAME}'
-            MYSQL_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-        volumes:
-            - 'sailmysql:/var/lib/mysql'
-        networks:
-            - sail
-        healthcheck:
-          test: ["CMD", "mysqladmin", "ping"]
+        image: mysql:5.7
         container_name: bank.db
-networks:
-    sail:
-        driver: bridge
-volumes:
-    sailmysql:
-        driver: local
-    sailredis:
-        driver: local
-    sailmeilisearch:
-        driver: local
+        ports:
+            - 3308:3306
+        environment:
+            MYSQL_ROOT_PASSWORD: 'test@123'
+            MYSQL_DATABASE: 'bank'
+            MYSQL_USER: 'system'
+            MYSQL_PASSWORD: 'test@123'
