--- a/envs/.env.example
+++ b/envs/.env.example
@@ -11,9 +11,10 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=bank.db
 DB_PORT=3306
-DB_PASSWORD=test
+DB_PASSWORD=test@123
 DB_DATABASE=bank
-DB_USERNAME=bank
+DB_USERNAME=system
+DOCKER_DB_PORT=3308
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
